# phobos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PhobosDemoConfigVersion.cmake  PhobosDemoTargets.cmake  README.md  cmake_install.cmake  run.sh
assets/levels/: begin.xml
assets/models/spaceship/: model.dae
assets/models/spaceship2/: model.dae
assets/models/spaceship3/: model.dae
assets/models/teapot/: model.dae
assets/models/teapot2/: model.dae
assets/models/weapon/: model.dae
libs/FreeImage/: Makefile  cmake_install.cmake
libs/glfw/: Makefile  cmake_install.cmake
libs/glfw/src/: Makefile  cmake_install.cmake
libs/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  glmConfig.cmake  glmTargets.cmake
libs/glm/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/glm/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/glm/test/bug/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/glm/test/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-core_force_ctor_init  test-core_force_pure  test-core_force_xyzw_only  test-core_func_common  test-core_func_exponential  test-core_func_geometric  test-core_func_integer  test-core_func_matrix  test-core_func_packing  test-core_func_swizzle  test-core_func_vector_relational  test-core_setup_force_size_t_length  test-core_setup_message  test-core_type_cast  test-core_type_ctor  test-core_type_int  test-core_type_length  test-core_type_mat2x2  test-core_type_mat2x3  test-core_type_mat2x4  test-core_type_mat3x2  test-core_type_mat3x3  test-core_type_mat3x4  test-core_type_mat4x2  test-core_type_mat4x3  test-core_type_mat4x4  test-core_type_vec1  test-core_type_vec2  test-core_type_vec3  test-core_type_vec4
libs/glm/test/ext/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-ext_matrix_common  test-ext_matrix_relational  test-ext_matrix_transform  test-ext_quaternion_common  test-ext_quaternion_exponential  test-ext_quaternion_geometric  test-ext_quaternion_relational  test-ext_quaternion_transform  test-ext_quaternion_trigonometric  test-ext_quaternion_type  test-ext_scalar_common  test-ext_scalar_relational  test-ext_scalar_ulp  test-ext_vec1  test-ext_vector_bool1  test-ext_vector_common  test-ext_vector_iec559  test-ext_vector_integer  test-ext_vector_relational  test-ext_vector_ulp
libs/glm/test/gtc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-gtc_bitfield  test-gtc_color_space  test-gtc_epsilon  test-gtc_integer  test-gtc_matrix_access  test-gtc_matrix_inverse  test-gtc_matrix_transform  test-gtc_noise  test-gtc_packing  test-gtc_quaternion  test-gtc_random  test-gtc_round  test-gtc_type_precision  test-gtc_type_ptr  test-gtc_ulp
libs/glm/test/gtx/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-gtx_color_encoding  test-gtx_color_space  test-gtx_common  test-gtx_compatibility  test-gtx_component_wise  test-gtx_dual_quaternion  test-gtx_easing  test-gtx_euler_angle  test-gtx_extended_min_max  test-gtx_fast_square_root  test-gtx_fast_trigonometry  test-gtx_functions  test-gtx_gradient_paint  test-gtx_integer  test-gtx_intersect  test-gtx_log_base  test-gtx_matrix_decompose  test-gtx_matrix_factorisation  test-gtx_matrix_interpolation  test-gtx_matrix_query  test-gtx_quaternion  test-gtx_rotate_vector  test-gtx_spline  test-gtx_string_cast  test-gtx_texture  test-gtx_type_aligned  test-gtx_vector_angle  test-gtx_vector_query  test-gtx_wrap
libs/glm/test/perf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/ogg/: DartConfiguration.tcl  ogg.pc  test_bitwise  test_framing
libs/ogg/include/ogg/: config_types.h
libs/openal-soft/: alffplay  alrecord  altonegen  libopenal.1.19.1.dylib  openal-info
libs/tinyxml2/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  xmltest
libs/vorbis/: vorbis.pc  vorbisenc.pc  vorbisfile.pc
shaders/: main.frag  main.vert  particle.frag  particle.vert  ui.frag  ui.vert
shaders/flatShading/: fragment.glsl  vertex.glsl
shaders/noShading/: fragment.glsl  vertex.glsl
shaders/phongShading/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  AssetsManager.cpp  AssetsManager.h  BoxNode.cpp  BoxNode.h  ColladaLoader.cpp  ColladaLoader.h  Geometry.cpp  Geometry.h  GpuProgram.cpp  GpuProgram.h  Loader.h  Material.h  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneGroup.cpp  SceneGroup.h  SceneNode.cpp  SceneNode.h  Texture.cpp  TextureLoader.cpp  VertexBuffer.cpp  VertexBuffer.h  main.cpp
src/engine/: Application.cpp  Application.h  Asset.h  AssetsManager.cpp  AssetsManager.h  AudioEngine.cpp  AudioEngine.h  BoundingBox.cpp  BoundingBox.h  BoxNode.cpp  BoxNode.h  ColladaLoader.cpp  ColladaLoader.h  CollisionHull.h  Font.cpp  Font.h  Geometry.cpp  Geometry.h  GpuProgram.cpp  GpuProgram.h  InputHandler.cpp  InputHandler.h  Light.h  Material.cpp  Material.h  Mesh.h  MeshNode.cpp  MeshNode.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  (+24 more)
src/game/: Background.cpp  Background.h  Enemy.h  Hud.cpp  Hud.h  Intro.h  Introship.h  Level.cpp  Level.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Spaceship.cpp  Spaceship.h  actions.h
(+4 files in other folders)
